# rustle-deploy

./: .gitignore  Cargo.toml  Justfile  README.md  deny.toml  example_rustle_plan_output.json  test_debug_only.json  test_plan.json  test_simple.json  test_verbose.json  test_verbose.yml
.claude/: settings.json
.github/workflows/: release.yml
specs/: 000-specs-status.md  010-rustle-deploy.md  020-execution-plan-integration.md  030-inventory-parsing.md  040-runtime-execution-engine.md  050-module-system-integration.md  060-rustle-plan-output-compatibility.md  070-core-execution-modules.md  080-binary-template-generation.md  090-cross-compilation-infrastructure.md  090-zero-infrastructure-cross-compilation.md  100-binary-compilation-pipeline.md  100-zero-infrastructure-cross-compilation.md  110-end-to-end-testing-framework.md  120-binary-output-management.md  130-module-parameter-compatibility.md  140-core-file-operations-modules.md  150-system-facts-gathering-module.md  160-archive-git-url-modules.md  170-user-group-management-modules.md  180-api-consolidation.md  190-type-system-unification.md  200-comprehensive-file-operations-testing.md  210-file-operations-test-failure-resolution.md  220-advanced-jinja2-template-compatibility.md  230-rustle-plan-format-update.md
src/: lib.rs  main.rs
src/binary/: analyzer.rs  architecture_detector.rs  deployment_planner.rs  mod.rs  module_registry.rs
src/cli/: commands.rs  mod.rs  options.rs  output.rs  setup.rs
src/compilation/: cache.rs  capabilities.rs  compiler.rs  mod.rs  optimizer.rs  target_detection.rs  toolchain.rs  zero_infra.rs  zigbuild.rs
src/compilation/backends/: cargo.rs  mod.rs  traits.rs  zigbuild.rs
src/compilation/output/: error.rs  manager.rs  mod.rs
src/compiler/: embedding.rs  mod.rs  optimization.rs  runtime_template.rs  targets.rs
src/deploy/: cache.rs  compiler.rs  deployer.rs  error.rs  manager.rs  mod.rs
src/execution/: binary_analyzer.rs  compatibility.rs  dependency.rs  error.rs  extractor.rs  format_migration.rs  inventory.rs  mod.rs  parser.rs  plan.rs  plan_converter.rs  rustle_plan.rs  template.rs  validation.rs  validator.rs
src/inventory/: detector.rs  error.rs  host_info.rs  mod.rs  plan_processor.rs  processor.rs  validator.rs  variables.rs
src/modules/: ast_parser.rs  cache.rs  compiler.rs  error.rs  interface.rs  loader.rs  mod.rs  registry.rs  resolver.rs  validator.rs
src/modules/archive/: archive.rs  create.rs  mod.rs  unarchive.rs
src/modules/core/: command.rs  debug.rs  mod.rs  package.rs  service.rs
src/modules/files/: copy.rs  file.rs  mod.rs  stat.rs  template.rs
src/modules/net/: mod.rs
src/modules/source_control/: git.rs  mod.rs
src/modules/system/: mod.rs  setup.rs
src/runtime/: conditions.rs  error.rs  executor.rs  facts.rs  mod.rs  progress.rs  state.rs
src/template/: cache.rs  embedder.rs  embedder_old.rs  generator.rs  mod.rs  optimizer.rs  platform.rs
src/templates/: cargo_toml.template  main_rs.template
src/templates/modules/: command.rs  copy.rs  debug.rs  file.rs  package.rs  service.rs  wait_for.rs
src/types/: compilation.rs  deployment.rs  inventory.rs  mod.rs  platform.rs
templates/: runtime_cargo.toml.template  runtime_main.rs.template
templates/modules/: module_wrapper.rs.template
tests/: cli_stdin_integration_tests.rs  critical_error_paths.rs  execution_integration_tests.rs  execution_parser_tests.rs  files_integration.rs  inventory_tests.rs  modules_integration_tests.rs  new_plan_format_test.rs  output_manager_tests.rs  parameter_mapping_completeness_test.rs  parameter_mapping_integration_test.rs  rustle_plan_integration.rs  setup_integration_test.rs  simple_verbose_tests.rs  stdin_input_tests.rs  stdin_parsing_tests.rs  template_generation_parameter_mapping_test.rs  test_verbose_cli_options.rs
tests/compilation/: capabilities_tests.rs  compiler_tests.rs  integration_tests.rs  optimizer_tests.rs  zero_infra_tests.rs
tests/compilation/output/: manager_tests.rs  mod.rs
tests/execution/: compatibility_tests.rs  integration_tests.rs  mod.rs  parser_tests.rs  rustle_plan_tests.rs
tests/fixtures/execution_plans/: ansible_demo_plan.json  combined_features_plan.json  file_operations_plan.json  file_operations_playbook_with_facts_plan.json  jinja_template_plan.json  minimal_ansible_plan.json  package_management_plan.json  service_management_plan.json  (+2 more)
tests/modules/: mod.rs
tests/runtime/: conditions_tests.rs  executor_tests.rs  facts_tests.rs  integration_tests.rs  mod.rs
tests/template/: generator_tests.rs  integration_tests.rs  mod.rs
(+98 files in other folders)
