[package]
name = "rustle-deploy"
version = "0.1.0"
edition = "2021"
description = "Specialized binary compiler and deployment manager for rustle execution plans"
license = "MIT"
repository = "https://github.com/memento-mori/rustle-deploy"
keywords = ["deployment", "compilation", "automation", "infrastructure"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rustle-deploy"
path = "src/bin/rustle-deploy.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.0"
dirs = "5.0"

[build-dependencies]
cargo_metadata = "0.18"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"