[package]
name = "rustle-deploy"
version = "0.1.0"
edition = "2021"
description = "Specialized binary compiler and deployment manager for rustle execution plans"
license = "MIT"
repository = "https://github.com/memento-mori/rustle-deploy"
keywords = ["deployment", "compilation", "automation", "infrastructure"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rustle-deploy"
path = "src/bin/rustle-deploy.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.0"
dirs = "5.0"
serde_yaml = "0.9"
jsonschema = "0.18"
handlebars = "4.5"
petgraph = "0.6"
url = "2.4"
regex = "1.10"
semver = "1.0"
async-trait = "0.1"
shell-words = "1.1"
hostname = "0.3"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
git2 = "0.18"
walkdir = "2.4"

# Template generation dependencies
once_cell = "1.19"
base64 = "0.21"

# Compression
lz4 = "1.24"
zstd = "0.12"

# Code generation
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = "0.27"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "winsvc"] }

[build-dependencies]
cargo_metadata = "0.18"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"