[package]
name = "rustle-deploy"
version = "0.1.0"
edition = "2021"
authors = ["Glen Baker <iepathos@gmail.com>"]
description = "Specialized binary compiler and deployment manager for rustle execution plans"
license = "GPL-3.0"
repository = "https://github.com/memento-mori/rustle-deploy"
keywords = ["deployment", "compilation", "automation", "infrastructure"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "rustle-deploy"
path = "src/bin/rustle-deploy.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
tempfile = "3"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.0"
dirs = "6.0"
serde_yaml = "0.9"
jsonschema = "0.30"
handlebars = "6.3"
petgraph = "0.8"
url = "2.4"
regex = "1.10"
semver = "1.0"
async-trait = "0.1"
shell-words = "1.1"
hostname = "0.4"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
git2 = "0.18"
walkdir = "2.4"
md-5 = "0.10"
sha1 = "0.10"
filetime = "0.2"

# Template generation dependencies
once_cell = "1.19"
base64 = "0.22"

# Compression
lz4 = "1.24"
zstd = "0.13"

# Code generation
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

# Cross-compilation support
which = "4.4"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = { version = "0.30", features = ["user", "fs"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winnt", "winsvc"] }

[build-dependencies]
cargo_metadata = "0.18"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"